--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Веб-разработчик полного цикла. Full stack web developer. JavaScript, Node.js, Vue.js, React, Express, MongoDB" />
     <link rel="icon" href="/favicon.ico">
     <title>roamiiing</title>
   </head>
